--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,10 @@
 * {
 	font-family: 'Raleway', sans-serif !important;
 	@include user-select(none);
+	// Android Keyboard changes the Viewport Heigh, there using this snippet is required
+	// transition: height 999999s, width 999999s, 
+	// margin-left 999999s, margin-right 999999s,
+	// margin-top 999999s, margin-bottom 999999s;
 }
 
 .section{
